Fix Java 17 build compatibility